--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
     "semi": false,
     "tabWidth": 4,
+    "arrowParens": "avoid",
     "printWidth": 100,
     "singleQuote": true,
     "trailingComma": "none",
